--- a/template.html
+++ b/template.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <title>Skipper Tutorial - Page Not Found</title>
+        <style>
+
+textarea {display: block}
+
+        </style>
     </head>
     <body>
         <h1>Skipper Tutorial</h1>
