--- a/view.html
+++ b/view.html
@@ -3,9 +3,17 @@
     <head>
         <meta charset="utf-8" />
         <title>Skipper Tutorial - Page Not Found</title>
+        <style>
+
+textarea {display: block}
+
+        </style>
     </head>
     <body>
         <h1>Skipper Tutorial</h1>
-        <p>The requested page cannot be found.</p>
+        <h3>Note</h3>
+        <code>
+            {{.}}
+        </code>
     </body>
 </html>
